# string-search

./: .gitignore  CMakeLists.txt  README.markdown  search.awk  sources
extra/: verslag.tex
extra/benchmark/: Benchmark.hs
plot/: buffer-size.rb  character-range.rb  common.rb  simple-case.rb  text-size.rb  worst-case.rb
src/: bench.c  bit-vector.c  bit-vector.h  common.c  common.h  main.c  search-files.c  search-files.h  search.c  search.h  search0.c  search1-bit-vector.c  search1-bit-vector.h  search1-brute-force.c  search1-brute-force.h  search1-ullong.c  search1-ullong.h  search1.c  search2.c  search3.c  search4.c
tests/: comparing-test.rb  generate-text-and-matches.c  generate-text.c  overlapping-test.rb  parallel-test.rb  random-text.c  verify-matches.c
util/: comparing-test.rb  generate-text-and-matches.c  generate-text.c  overlapping-test.rb  parallel-test.rb  pipe-diff.hs  random-text.h  run-test.sh  verify-matches.c  verify-matches.h  worst-case.c
